--- a/style.css
+++ b/style.css
@@ -140,6 +140,9 @@ footer {
     text-align: center;
     padding: 10px 0;
 }
-.miguel { 
-    position: absolute;
+.piupiu {
+    font-size: 1000px;
+    margin: 0 auto;
+    text-align: center;
+    color:#000000;
 }
